# SonicTheHedgehog-GameProject

./: CMakeLists.txt  README.md
include/: Animation.h  AnimationData.h  Board.h  CMakeLists.txt  Characters.h  CollisionHandling.h  Constant.h  Controller.h  Dimond.h  Direction.h  Door.h  Enemy.h  EnemyBat.h  EnemyCrab.h  EnemyFish.h  Factory.h  GameObject.h  Information.h  MainMenu.h  Move.h  MoveLeftRight.h  MoveUpDown.h  MovingGround.h  MovingObject.h  MyListener.h  NonAnimationObject.h  ResourcesAnimation.h  ResourcesImages.h  ResourcesSounds.h  Ring.h  ScreenButtons.h  Shield.h  SonicPlayer.h  Springboard.h  StaticObject.h  Thorn.h  Wall.h  WoodBox.h
resources/font/: CMakeLists.txt
resources/images/: CMakeLists.txt
resources/sounds/: CMakeLists.txt
resources/texts/: CMakeLists.txt  Level1.txt  Level2.txt  Level3.txt  Level4.txt  Level5.txt  Levels.txt
src/: Animation.cpp  Board.cpp  CMakeLists.txt  Characters.cpp  CollisionHandling.cpp  Controller.cpp  Dimond.cpp  Direction.cpp  Door.cpp  Enemy.cpp  EnemyBat.cpp  EnemyCrab.cpp  EnemyFish.cpp  GameObject.cpp  Information.cpp  MainMenu.cpp  Move.cpp  MoveLeftRight.cpp  MoveUpDown.cpp  MovingGround.cpp  MovingObject.cpp  MyListener.cpp  NonAnimationObject.cpp  ResourcesAnimation.cpp  ResourcesImages.cpp  ResourcesSounds.cpp  Ring.cpp  ScreenButtons.cpp  Shield.cpp  SonicPlayer.cpp  Springboard.cpp  StaticObject.cpp  Thorn.cpp  Wall.cpp  WoodBox.cpp  main.cpp
